--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,116 +1,58 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width">
+<html lang="{{ page.lang | default: site.lang | default: 'en' }}">
 
-        <title>{{ site.title }}{% if page.title %} : {{ page.title }}{% endif %}</title>
-        <meta name="description" content="{{ site.subtitle }}">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>{{ page.title | default: site.title | escape }}</title>
+  <meta name="description" content="{{ page.subtitle | default: page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+  <meta name="generator" content="Mining Software Engineering Data for Software Reuse: https://thdiaman.github.io/mining-software-reuse-book/, https://github.com/thdiaman/mining-software-reuse-book">
+  <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+  <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+</head>
 
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
-    </head>
-    <body>
+<body>
 
-        <div class="container">
-            <div class="row">
-                <div id="header" class="col-sm-12">
-                    {% include header.html %}
-                </div>
-            </div>
+  <main class="page-content" aria-label="Content">
+    <div class="wrapper">
 
-            <div class="row">
-                {% assign post_count = site.posts|size %}
-                {% if site.navigation != 0 and site.navigation == 1 or post_count > 0 %}
-                    <div id="navigation" class="col-sm-2" style="width: 20%">
-                        {% include navigation.html %}
-                    </div>
+<!--content-begin-->
+{{ content }}
+<!--content-end-->
 
-                    <div id="content" class="col-sm-10" style="width: 80%">
-                        {{ content }}
-                    </div>
-                {% else %}
-                    <div id="content" class="col-sm-12">
-                        {{ content }}
-                    </div>
-                {% endif %}
-            </div>
+    </div>
+  </main>
 
-            {% if page.disqus == 1 %}
-            <div class="row">
-              {% if site.navigation == 1 or post_count > 0 %}
-                <div id="navigation" class="col-sm-2"></div>
-                <div id="disqus" class="col-sm-10">
-                    {% include disqus.html %}
-                </div>
-              {% else %}
-                <div id="disqus" class="col-sm-12">
-                    {% include disqus.html %}
-                </div>
-              {% endif %}
-            </div>
-            {% endif %}
+  <input type="checkbox" id="nav-trigger" class="nav-trigger" />
+  <label for="nav-trigger" class="nav-button"><span class="nav-icon"></span></label>
+  <label for="nav-trigger" class="overlay"></label>
 
-            <div class="row">
-                <div id="footer" class="col-sm-12">
-                    {% include footer.html %}
-                </div>
-            </div>
-        </div>
+  <div class="sidebar">
+    <div class="wrapper">
+      <header class="site-header">
+        <a class="site-title" href="{{ '/' | relative_url }}">
+          <h2>{{ site.title | smartify }}</h2>
+          <p class="meta">{{ site.description | smartify }}</p>
+        </a>
+      </header>
+      <nav class="site-nav">
 
-        <script>
-            function orderNav() {
-                var list,
-                    section,
-                    header,
-                    sections = [],
-                    lists = {},
-                    headers = {};
+<!--navigation-content-begin-->
+{% include nav-list-pages-main.html %}
+{% include nav-list-pages-support.html header=true %}
+{% include nav-list-pages-info.html header=true %}
+<!-- <a class="meta" href="https://github.com/ogobrecht/hydebar">Powered by Jekyll & HydeBar</a> -->
+<!--navigation-content-end-->
 
-                var navUl = document.querySelectorAll('#navigation ul')[0],
-                    navLis = document.querySelectorAll('#navigation ul li');
+      </nav>
+    </div>
+  </div>
 
-                if (!navUl) return;
+{% if jekyll.environment == 'production' and site.google_analytics %}{% include google-analytics.html %}{% endif %}
+</body>
 
-                for (var i = 0; i < navLis.length; i++) {
-                    var order, li = navLis[i];
-
-                    if (li.classList.contains('nav-header')) {
-                        section = li.textContent || li.innerText;
-                        sections.push(section);
-                        headers[section] = li;
-                        continue;
-                    }
-
-                    if (!lists[section]) {
-                        lists[section] = [];
-                    }
-
-                    order = parseFloat(li.getAttribute('data-order'))
-                    lists[section].push([order, li]);
-                }
-
-                for (var i = 0; i < sections.length; i++) {
-                    section = sections[i];
-                    list = lists[section].sort(function(a, b) {
-                        return a[0] - b[0];
-                    });
-
-                    if (header = headers[section]) {
-                        navUl.appendChild(header);
-                    }
-                    for (var j = 0; j < list.length; j++) {
-                        navUl.appendChild(list[j][1]);
-                    }
-                }
-            }
-
-            if (document.querySelectorAll) orderNav();
-        </script>
-        {% if site.google_analytics_id != "" %}
-        {% include google_analytics.html %}
-        {% endif %}
-    </body>
 </html>
