--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,13 @@
 ---
 layout: default
 ---
-
-<div class="page-header">
-    <h2>{{ page.title }}
-        {% if page.subtitle %}<small>{{ page.subtitle }}</small>{% endif %}
-    </h2>
-</div>
+<article class="post">
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title | escape }}</h1>
+  </header>
+  <div class="post-content">
 
 {{ content }}
+
+  </div>
+</article>
