Add book cover and update index and licensing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ page.title | default: site.title | escape }}</title>
+  <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
   <meta name="description" content="{{ page.subtitle | default: page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
   <meta name="generator" content="Mining Software Engineering Data for Software Reuse: https://thdiaman.github.io/mining-software-reuse-book/, https://github.com/thdiaman/mining-software-reuse-book">
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
